Trying to ensure proper positioning and placement on mobile.

--- a/Styles/Ordering.css
+++ b/Styles/Ordering.css
@@ -3,14 +3,12 @@
     box-sizing: border-box;
 }
 
-.root {
-    font-size: 16px;
-}
 
 body {
     height: auto;
     background-color: black;
     color: white;
+    font-size: 16px;
 }
 
 html {
@@ -136,36 +134,20 @@ input, select, textarea {
     text-align: center;
 }
 
-@media screen and (min-width: 300px) and (max-width:450px) {
-
-    .orderForm {
-            width: 100%;
-            border: none;
-        }
+@media  screen and (min-width: 100px) and (max-width: 500px) {
     .options img {
-                height: 250px;
-                width: 290px;
-                border: 1px solid white;
-                margin: 0;
-            }
-
-}
-
-@media screen and (min-width:200px) and (max-width: 768px) {
-    .main {
-        height: 101vh;
-        width: 100%
+        height: 100px;
+        width: 100px;
+        margin: 5px;
     }
+
     .orderForm {
         width: 100%;
         border: none;
-        margin: 0;
     }
-
-    .options img {
-        height: 250px;
-        width: 290px;
-        margin: 5px;
-        border: 1px solid silver;
+    
+    body {
+        font-size: 10px;
+        background: blue;
     }
 }
